Add Multiple Coroutines scenarios

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,14 @@
 <resources>
     <string name="app_name">Coroutine x Flow</string>
+
     <string name="simple_coroutine_title">Simple Coroutine</string>
     <string name="simple_coroutine_description">I\'m just a simple fire-and-forget coroutine.</string>
     <string name="simple_coroutine_button_label">Fire!</string>
     <string name="loading_label">Executing…</string>
+
+    <string name="sequential_coroutine_title">Sequential Coroutines</string>
+    <string name="sequential_coroutine_description">I execute two coroutines sequentially.</string>
+
+    <string name="asynchronous_coroutines_title">Asynchronous Coroutines</string>
+    <string name="asynchronous_coroutines_description">I execute two coroutines asynchronously.</string>
 </resources>
